<resources>
    <string name="app_name">Gps_Agenda</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_config">Settings</string>

    <string name="dummy_content">GPS\nAGENDA</string>
    <string name="title_activity_principal">Main Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="map_type_none">None</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_hybrid">Hybrid</string>

    <string name="principal_search_button">SEARCH</string>
    <string name="principal_hint_place">What place do you need?</string>
    <string name="header_title2">GPS Agenda</string>
    <string name="header_name" translatable="false">Barbu Alexandru</string>

    <string name="config_walk">Walk</string>
    <string name="config_car">Car</string>
    <string name="config_transit">Transit</string>
    <string name="config_bicycle">Bicycle</string>
    <string name="config_save">DONE</string>
    <string name="config_from">From</string>
    <string name="config_to">To</string>
    <string name="config_parse">Time parsing didn\'t work. Try again!</string>
    <string name="config_l">English</string>
    <string name="config_sync">Sync content with cloud</string>

    <string name="online_frag_ecotext">When battery level is critical</string>
    <string name="online_frag_eco">Battery Saving Mode</string>
    <string name="online_frag_sw">Switch</string>
    <string name="online_frag_off">Turn Off Service </string>
    <string name="online_frag_acc">Default PIN accuracy (1 - highest, 5 - lowest)</string>
    <string name="online_frag_radius">Default PIN radius (1 - smallest, 5 - biggest)</string>
    <string name="online_frag_shape">Shape</string>
    <string name="online_frag_color">Color</string>
    <string name="pref_pin">PINs</string>

    <string name="drawer_main">Main Map</string>
    <string name="drawer_pref">Preferences</string>
    <string name="drawer_config">Settings</string>
    <string name="drawer_pin">Marker</string>
    <string name="drawer_itinerary">Itineraries</string>
    <string name="drawer_marker">Individual Markers</string>

    <string name="memo">Insert marker desciption (memo)</string>
    <string name="pin_edit">Edit Marker</string>

    <string name="popmk_title_hint">New title </string>
    <string name="popmk_title_cond">(32 ch. max) </string>
    <string name="popmk_empty">(no title)</string>

    <string name="pref_pinsize">Default PIN size on map</string>
    <string name="pop_radius">Radius</string>

    <string name="pop_accu">Accuracy</string>
    <string name="pop_size">Size</string>
    <string name="config_lang">Language</string>

    <string name="drawer_signout">Sign Out</string>
    <string name="side_colorupd">Update</string>
    <string name="side_colorRad">Radius</string>


    <string name="popiti_name">Insert new name</string>
    <string name="popiti_desc">Insert new description</string>
    <string name="popiti_exists">Name already exists</string>
    <string name="popiti_date">No date selected</string>


    <string name="pinw_pass">Passed- </string>
    <string name="pin_w_title">title</string>
    <string name="pin_w_last">Last visit</string>
    <string name="pin_w_last_date">- none yet</string>

    <string name="side_principal_hint">Select Itinerary</string>



    <string name="locale_lang">eng</string>
    <string name="geo_enter">You are around</string>
    <string name="geo_exit">You passed around</string>

    <string-array name="markers">
        <item><string name="circle_red">Circle Red</string></item>
        <item><string name="circle_green">Circle Green</string></item>
        <item><string name="circle_blue">Circle Blue</string></item>
        <item><string name="circle_yellow">Circle Yellow</string></item>
        <item><string name="square_red">Square Red</string></item>
        <item><string name="square_green">Square Green</string></item>
        <item><string name="square_blue">Square Blue</string></item>
        <item><string name="square_yellow">Square Yellow</string></item>
        <item><string name="shield_red">Shield Red</string></item>
        <item><string name="shield_green">Shield Green</string></item>
        <item><string name="shield_blue">Shield Blue</string></item>
        <item><string name="shield_yellow">Shield Yellow</string></item>

    </string-array>

    <string-array name="online_color">
        <item><string name="red">Red</string></item>
        <item><string name="green">Green</string></item>
        <item><string name="blue">Blue</string></item>
        <item><string name= "yellow">Yellow</string></item>
    </string-array>

    <string-array name="online_shape">
        <item><string name="circle">Circle</string> </item>
        <item><string name="square">Square</string></item>
        <item> <string name="shield">Shield</string> </item>

    </string-array>


</resources>
