<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/drawer_main" />
        <item
            android:id="@+id/nav_pref"
            android:icon="@mipmap/pref2"
            android:title="@string/drawer_pref" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@mipmap/calendar_ic"
            android:title="Calendar" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_config" />

    <item
        android:id="@+id/nav_signout"
        android:icon="@mipmap/sign_out"
        android:title="@string/drawer_signout" />
    </group>
    <item android:title="@string/drawer_pin">
        <menu>
            <item
                android:id="@+id/nav_iti"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/drawer_itinerary" />
            <item
                android:id="@+id/nav_pin"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/drawer_marker" />
        </menu>
    </item>

</menu>
