<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="a_barbu.gps_agenda.Preferences">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


    </android.support.design.widget.AppBarLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
            android:id="@+id/pref_eco">
        <TextView
            android:textAlignment="textEnd"
            android:layout_marginLeft="0dp"
            android:textSize="18dp"
            android:text="@string/online_frag_ecotext"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rg_bat">
        <RadioButton
            android:checked="true"
            android:textSize="17dp"
            android:layout_marginLeft="170dp"
            android:text="@string/online_frag_eco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="select_batt"
            android:id="@+id/but_eco"
            />
        <RadioButton

            android:textSize="17dp"
            android:layout_marginLeft="170dp"
            android:text="@string/online_frag_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="select_batt"
            android:id="@+id/but_off"
             />
            </RadioGroup>
        </FrameLayout>

        <FrameLayout
        android:layout_marginTop="85dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
            android:id="@+id/pref_acc">
        <TextView
            android:textAlignment="textEnd"
            android:textSize="18dp"
            android:text="@string/online_frag_acc"
            android:layout_width="190dp"
            android:layout_height="wrap_content" />

            <SeekBar
                android:layout_marginTop="10dp"
                android:layout_marginLeft="190dp"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar_acc"
                android:max="5"
                android:theme="@style/Base.Animation.AppCompat.DropDownUp"
                android:progress="3" />


        </FrameLayout>

         <FrameLayout
        android:layout_marginTop="140dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
             android:id="@+id/pref_rad">
             <TextView
                 android:textAlignment="textEnd"
                 android:textSize="18dp"
                 android:text="@string/online_frag_radius"
                 android:layout_width="190dp"
                 android:layout_height="wrap_content" />

             <SeekBar
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="190dp"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/seekBar_radius"
                 android:max="5"
                 android:progress="3" />


         </FrameLayout>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="190dp">
    <TextView
        android:layout_width="190dp"
        android:textAlignment="textEnd"
        android:layout_height="wrap_content"
        android:text="@string/pref_pinsize"
        android:textSize="17dp"/>
    <SeekBar
        android:layout_marginTop="10dp"
        android:layout_marginLeft="190dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar_size"
        android:max="2"
        android:progress="1" />


</FrameLayout>

        <FrameLayout
      android:layout_marginTop="225dp"
      android:layout_width="match_parent"
      android:layout_height="234dp">
            <TextView
                android:text="@string/pref_pin"
                android:textSize="20dp"
                android:layout_marginLeft="150dp"
                android:textAlignment="center"
                android:layout_width="50dp"
                android:layout_height="25dp" />
            <TextView
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="16dp"
                android:text="@string/online_frag_shape"
                android:layout_width="160dp"
                android:layout_height="25dp" />

            <TextView
                android:textSize="16dp"
                android:textAlignment="center"
                android:text="@string/online_frag_color"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="20dp"
                android:layout_width="148dp"
                android:layout_height="25dp" />
            <ListView
                android:layout_marginLeft="220dp"
                android:textAlignment="center"
                android:id="@+id/list_color"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp">

            </ListView>

            <ListView
                android:textAlignment="center"
                android:id="@+id/list_shapes"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp">

            </ListView>
<ImageView
    android:layout_marginTop="30dp"
    android:layout_marginLeft="120dp"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:id="@+id/pin_view"
    >

</ImageView>
<Button
    android:layout_marginTop="150dp"
    android:layout_marginLeft="120dp"
    android:layout_width="100dp"
    android:layout_height="50dp"
    android:text="@string/config_save"
    android:id="@+id/pref_save" />
        </FrameLayout>

    </FrameLayout>


        </RelativeLayout>



