<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="a_barbu.gps_agenda.Preferences"
        android:background="@drawable/backgr_tansparent"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:textAlignment="textEnd"
            android:layout_marginLeft="100dp"
            android:paddingTop="15dp"
            android:textSize="16dp"
            android:text="@string/online_frag_ecotext"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textStyle="bold"/>

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:src="@mipmap/battery2"
            android:id="@+id/batt_gif"
            android:paddingTop="10dp"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/rg_bat" />

        <RadioGroup
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:id="@+id/rg_bat"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/pref_text_acc">

            <RadioButton
                android:id="@+id/but_eco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="select_batt"
                android:text="@string/online_frag_eco"
                android:textSize="14dp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/but_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="select_batt"
                android:text="@string/online_frag_off"
                android:textSize="14dp"
                android:textStyle="bold"/>
        </RadioGroup>


        <TextView
            android:id="@+id/pref_text_acc"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/online_frag_acc"
            android:textAlignment="textEnd"
            android:textSize="15dp"
            android:paddingTop="7dp"
            android:layout_below="@+id/batt_gif"
            android:layout_alignParentStart="true" />

        <SeekBar
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar_acc"
            android:max="5"
            android:theme="@style/Base.Animation.AppCompat.DropDownUp"
            android:progress="3"

            android:layout_above="@+id/textView8"
            android:layout_toEndOf="@+id/pref_text_acc"
            android:layout_marginBottom="7dp" />



        <TextView
            android:textAlignment="textEnd"
            android:textSize="15dp"
            android:text="@string/online_frag_radius"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/textView8"
            android:layout_below="@+id/pref_text_acc"
            android:layout_alignParentStart="true" />

        <SeekBar
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar_radius"
            android:max="5"
            android:progress="3"
            android:layout_alignTop="@+id/textView8"
            android:layout_toEndOf="@+id/textView8"
            android:layout_marginTop="8dp" />


        <TextView
            android:layout_width="190dp"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:text="@string/pref_pinsize"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:id="@+id/textView9"
            android:layout_below="@+id/textView8"
            android:layout_alignParentStart="true" />

        <SeekBar
            android:layout_marginLeft="190dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar_size"
            android:max="2"
            android:progress="1"
            android:layout_alignTop="@+id/textView9"
            android:layout_toEndOf="@+id/textView9"
            android:layout_marginStart="7dp" />


    </RelativeLayout>





        <FrameLayout
      android:layout_marginTop="255dp"
      android:layout_width="match_parent"
      android:layout_height="234dp">
            <TextView
                android:text="@string/pref_pin"
                android:textSize="20dp"
                android:layout_marginLeft="150dp"
                android:textAlignment="center"
                android:layout_width="50dp"
                android:layout_height="25dp" />
            <TextView
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="16dp"
                android:text="@string/online_frag_shape"
                android:layout_width="160dp"
                android:layout_height="25dp" />
            <TextView
                android:textSize="16dp"
                android:textAlignment="center"
                android:text="@string/online_frag_color"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="20dp"
                android:layout_width="148dp"
                android:layout_height="25dp" />

            <ListView
                android:layout_marginLeft="220dp"
                android:textAlignment="center"
                android:id="@+id/list_color"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp">
            </ListView>

            <ListView
                android:textAlignment="center"
                android:id="@+id/list_shapes"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp">
            </ListView>

<ImageView
    android:layout_marginTop="30dp"
    android:layout_marginLeft="120dp"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:id="@+id/pin_view"
    >

</ImageView>

<Button
    android:layout_marginTop="150dp"
    android:layout_marginLeft="120dp"
    android:layout_width="100dp"
    android:layout_height="50dp"
    android:text="@string/config_save"
    android:id="@+id/pref_save"
    android:background="@drawable/backgr_buton"/>
        </FrameLayout>




        </RelativeLayout>



