<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr_settings"
    android:backgroundTint="@color/white"
    tools:context="a_barbu.gps_agenda.Config"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/config_to"
        android:id="@+id/config_to"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/config_from"
        android:layout_alignStart="@+id/config_from"
        android:layout_toStartOf="@+id/hour_stop" />

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@mipmap/h24h"
        android:id="@+id/h24_gif"
        android:layout_marginLeft="20dp"
        android:onClick="set24"
        android:layout_alignTop="@+id/hour_start"
        android:layout_toEndOf="@+id/config_sync" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:src="@mipmap/hourglass"
        android:onClick="showClock"
        android:id="@+id/imageView2"
        android:layout_marginRight="-50dp"
        android:layout_alignTop="@+id/hour_start"
        android:layout_alignEnd="@+id/rgroup" />

    <!--<pl.droidsonroids.gif.GifImageView-->
        <!--android:layout_width="120dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:src="@mipmap/steps"-->
        <!--android:id="@+id/steps"-->
        <!--android:paddingTop="10dp"-->
        <!--android:onClick="set24"-->
        <!--android:layout_alignBottom="@+id/config_tagL"-->
        <!--android:layout_toEndOf="@+id/config_tagL"-->
        <!--android:layout_marginBottom="11dp" />-->

    <Button
        android:text="@string/config_save"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/config_done"
        android:onClick="onClick"
        android:layout_weight="1"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/config_to"
        android:layout_centerHorizontal="true"
        android:background="@drawable/backgr_buton"/>


    <ImageView
            android:id="@+id/config_logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@mipmap/logot2"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/config_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/config_from"
            android:textSize="21dp"
            android:layout_below="@+id/config_lang"
            android:layout_alignStart="@+id/config_lang" />


        <RadioGroup
            android:id="@+id/rgroup"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp">

            <RadioButton
                android:id="@+id/config_car"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="select_def_transp"
                android:textSize="17dp"
                android:text="@string/config_car" />

            <RadioButton
                android:id="@+id/config_walk"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="select_def_transp"
                android:textSize="17dp"
                android:text="@string/config_walk" />

            <RadioButton
                android:id="@+id/config_bicycle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="select_def_transp"
                android:textSize="17dp"
                android:text="@string/config_bicycle" />

            <RadioButton
                android:id="@+id/config_transit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="select_def_transp"
                android:textSize="17dp"
                android:text="@string/config_transit" />


        </RadioGroup>

        <Switch
            android:id="@+id/config_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
android:textSize="19dp"
            android:text="@string/config_lang"
            android:layout_alignBaseline="@+id/config_tagL"
            android:layout_alignBottom="@+id/config_tagL"
            android:layout_alignStart="@+id/rgroup" />

        <TextView
            android:id="@+id/config_tagL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_l"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/default_photo"
            android:layout_toEndOf="@+id/config_lang"
            android:layout_marginLeft="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Sync"
            android:text="@string/config_sync"
            android:id="@+id/config_sync"
            android:layout_below="@+id/config_done"
            android:layout_alignEnd="@+id/config_logo" />

        <ImageView
            android:id="@+id/default_photo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginLeft="180dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/config_tagL"
            android:layout_marginStart="50dp" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:id="@+id/config_arrow"
        android:src="@mipmap/arrow_up"
        android:layout_marginRight="-25dp"
        android:layout_below="@+id/hour_start"
        android:layout_marginTop="-5dp"
        android:layout_alignStart="@+id/hour_start"
        android:layout_alignEnd="@+id/config_done" />

    <TextView
        android:id="@+id/hour_start"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:text="08:00"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_marginRight="-10dp"
        android:layout_above="@+id/config_to"
        android:layout_toStartOf="@+id/h24_gif" />

    <TextView
        android:id="@+id/hour_stop"
        android:textSize="22dp"
        android:text="22:00"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/config_to"
        android:layout_alignStart="@+id/hour_start"
        android:layout_alignBottom="@+id/config_to"
        android:fontFamily="casual"
        android:textStyle="bold"/>

<TextView
    android:layout_marginLeft="250dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tv"/>

    </RelativeLayout>


